<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.io7m.primogenitor</groupId>
    <artifactId>com.io7m.primogenitor</artifactId>
    <version>3.0.0-beta0004</version>
  </parent>

  <groupId>com.io7m.sigiltron</groupId>
  <artifactId>sigiltron</artifactId>
  <version>1.1.0</version>

  <packaging>jar</packaging>

  <name>sigiltron</name>
  <description>Sigil generator</description>
  <url>http://github.com/io7m/sigiltron/</url>

  <properties>
    <io7m.api.previousVersion>1.1.0</io7m.api.previousVersion>
  </properties>

  <licenses>
    <license>
      <name>ISC License</name>
      <url>http://io7m.com/license/isc.txt</url>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/io7m/sigiltron</url>
    <connection>scm:git:https://github.com/io7m/sigiltron</connection>
    <developerConnection>scm:git:https://github.com/io7m/sigiltron</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>io7m</id>
      <name>io7m</name>
      <email>code@io7m.com</email>
      <url>http://io7m.com</url>
    </developer>
  </developers>

  <issueManagement>
    <url>http://github.com/io7m/sigiltron/issues</url>
    <system>GitHub Issues</system>
  </issueManagement>

  <distributionManagement>
    <site>
      <id>GitHub</id>
      <name>GitHub</name>
      <url>http://io7m.github.io/sigiltron</url>
    </site>
    <repository>
      <id>sonatype-nexus-staging</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <ciManagement>
    <system>Travis CI</system>
    <url>https://travis-ci.org/io7m/sigiltron</url>
  </ciManagement>

  <prerequisites>
    <maven>3.0.4</maven>
  </prerequisites>

  <dependencies>
    <dependency>
      <groupId>com.io7m.junreachable</groupId>
      <artifactId>com.io7m.junreachable.core</artifactId>
      <version>2.0.0</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.3.0-alpha4</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.8.0-beta2</version>
    </dependency>
    <dependency>
      <groupId>net.java.dev.designgridlayout</groupId>
      <artifactId>designgridlayout</artifactId>
      <version>1.11</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-all</artifactId>
      <version>1.9.1</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Require JDK >= 9 -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>9</source>
            <target>9</target>
            <release>9</release>
          </configuration>
        </plugin>

        <!-- Ignore dependencies that bytecode analysis gets wrong. -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <configuration>
            <failOnWarning>true</failOnWarning>
            <ignoredUsedUndeclaredDependencies>
              <ignoredUsedUndeclaredDependency>xml-apis:*:*</ignoredUsedUndeclaredDependency>
            </ignoredUsedUndeclaredDependencies>
            <ignoredUnusedDeclaredDependencies>
              <ignoredUnusedDeclaredDependency>ch.qos.logback:logback-classic:*</ignoredUnusedDeclaredDependency>
            </ignoredUnusedDeclaredDependencies>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Spot bugs -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <configuration>
          <excludeFilterFile>spotbugs-filter.xml</excludeFilterFile>
        </configuration>
      </plugin>

      <!-- Produce command-line onejar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <minimizeJar>false</minimizeJar>
              <shadedClassifierName>main</shadedClassifierName>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>com.io7m.sigiltron.SigiltronMain</Main-Class>
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
